# Natural-Language-Processing-NLP-Projects

./: README.md  pyproject.toml  summarize.py
