[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "Natural Language Processing (NLP)"
version = "0.1"
author = "Zülfükar MİNAZ"
author_email = "zlfkrmnz@gmail.com"
description = "Projenizin kısa bir açıklamasıWelcome to my personal repository dedicated to projects in the field of Natural Language Processing (NLP). Here, you'll find a collection of my work ranging from academic experiments to practical applications, all aimed at exploring the vast capabilities and recent advancements in NLP."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/zlfkrmnz/Natural-Language-Processing-NLP-Projects"
packages = ["find:"]
install_requires = [
    'nltk>=3.5',
]
python_requires = ">=3.6"
