[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Natural-Language-Processing-NLP"
version = "0.1.0"
description = "Welcome to my personal repository dedicated to projects in the field of Natural Language Processing (NLP). Here, you'll find a collection of my work ranging from academic experiments to practical applications, all aimed at exploring the vast capabilities and recent advancements in NLP."
authors = [
    { name = "Zülfükar MİNAZ", email = "zlfkrmnz@gmail.com" },
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["nlp", "summarize", "nltk"]
dependencies = [
    "nltk>=3.5",
]

[project.urls]
Homepage = "https://github.com/zlfkrmnz/Natural-Language-Processing-NLP-Projects"
Documentation = "https://github.com/zlfkrmnz/Natural-Language-Processing-NLP-Projects#readme"